k8s/discovery-server/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-server
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-server
  template:
    metadata:
      labels:
        app: discovery-server
    spec:
      containers:
        - name: discovery-server
          image: otniel217/discovery-server:latest
          ports:
            - containerPort: 8761
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
