k8s/discovery-server/service.yml
apiVersion: v1
kind: Service
metadata:
  name: discovery-server
  namespace: ecommerce
spec:
  selector:
    app: discovery-server
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
  type: ClusterIP
