k8s/discovery-server/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discovery-server-ingress
  namespace: ecommerce
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: otniel-devops.ddns.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: discovery-server
            port:
              number: 8761
